[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/Fonts/a_space/A-Space Regular Demo.otf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/Pause_Menu.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 1 )

[node name="Pause_Menu" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.403922 )

[node name="ExitBtn" type="Button" parent="."]
margin_left = 578.0
margin_top = 358.0
margin_right = 728.0
margin_bottom = 399.0
custom_fonts/font = SubResource( 1 )
text = "EXIT"

[node name="ContinueBtn" type="Button" parent="."]
margin_left = 549.0
margin_top = 297.0
margin_right = 755.0
margin_bottom = 338.0
custom_fonts/font = SubResource( 2 )
text = "CONTINUE"

[connection signal="pressed" from="ExitBtn" to="." method="_on_ExitBtn_pressed"]
[connection signal="pressed" from="ContinueBtn" to="." method="_on_ContinueBtn_pressed"]
